<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:key="@string/key_permission_discount"
        android:title="@string/title_permission_discount"
        android:entries="@array/staff_titles"
        android:entryValues="@array/staff_titles_values"
        android:defaultValue="4"
        />
    <ListPreference
        android:key="@string/key_permission_dine_in"
        android:title="@string/title_permission_dine_in"
        android:entries="@array/staff_titles"
        android:entryValues="@array/staff_titles_values"
        android:defaultValue="4"
        />
    <ListPreference
        android:key="@string/key_permission_log"
        android:title="@string/title_permission_log"
        android:entries="@array/staff_titles"
        android:entryValues="@array/staff_titles_values"
        android:defaultValue="4"
        />
    <ListPreference
        android:key="@string/key_permission_setting"
        android:title="@string/title_permission_setting"
        android:entries="@array/staff_titles"
        android:entryValues="@array/staff_titles_values"
        android:defaultValue="4"
        />
    <ListPreference
        android:key="@string/key_permission_modify_order"
        android:title="@string/title_permission_modify_order"
        android:entries="@array/staff_titles"
        android:entryValues="@array/staff_titles_values"
        android:defaultValue="4"
        />
</PreferenceScreen>