<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_password_width"
    android:layout_height="wrap_content"
    >

    <com.example.onepos.view.PasswordView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_password_view_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:id="@+id/view_pw"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pw"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_2"
        android:text="@string/keyboard_1"
        android:id="@+id/btn_kb_1"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_1"
        app:layout_constraintTop_toBottomOf="@id/view_pw"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_3"
        android:text="@string/keyboard_2"
        android:id="@+id/btn_kb_2"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_2"
        app:layout_constraintTop_toBottomOf="@id/view_pw"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/keyboard_3"
        android:id="@+id/btn_kb_3"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_1"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_5"
        android:text="@string/keyboard_4"
        android:id="@+id/btn_kb_4"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_4"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_1"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_6"
        android:text="@string/keyboard_5"
        android:id="@+id/btn_kb_5"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_5"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/keyboard_6"
        android:id="@+id/btn_kb_6"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_4"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_8"
        android:text="@string/keyboard_7"
        android:id="@+id/btn_kb_7"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_7"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_4"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_9"
        android:text="@string/keyboard_8"
        android:id="@+id/btn_kb_8"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_8"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_4"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/keyboard_9"
        android:id="@+id/btn_kb_9"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_7"
        app:layout_constraintEnd_toStartOf="@id/btn_kb_0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_cancel"
        android:id="@+id/btn_cancel"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_7"
        app:layout_constraintEnd_toStartOf="@id/btn_backpack"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/keyboard_0"
        android:id="@+id/btn_kb_0"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PasswordButton"
        app:layout_constraintStart_toEndOf="@id/btn_kb_0"
        app:layout_constraintTop_toBottomOf="@id/btn_kb_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_return"
        android:id="@+id/btn_backpack"
        />
</androidx.constraintlayout.widget.ConstraintLayout>